@@ -3,6 +3,11 @@ Changes 0.12.0
  * add KDF API
  * add PBKDF API
  * update Makefile to look for environment
+ * bug fix speed test
+ * add AIO support (this code is derived from the example code developed by
+   Tadeusz Struk -- thanks a lot)
+ * Move DSO_PUBLIC out of the public header file into the private header file
+ * use _kcapi_cipher_crypt for AEAD operations - eliminate code duplication
 
 Changes 0.11.1
  * move version information to kcapi.h to allow compile time tests for wrapping
